plugins {
    id 'java'
    id 'io.github.goooler.shadow' version '8.1.7'
}

group = 'com.github.DemonZ-Development'
version = '26.2.0'

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}

configurations.all {
    attributes {
        attribute(
            org.gradle.api.attributes.java.TargetJvmVersion.TARGET_JVM_VERSION_ATTRIBUTE,
            21
        )
    }
}

repositories {
    mavenCentral()
    maven { url 'https://repo.papermc.io/repository/maven-public/' }
    maven { url 'https://repo.extendedclip.com/content/repositories/placeholderapi/' }
    maven { url 'https://repo.luckperms.net/' }
    maven { url 'https://jitpack.io/' }
}

dependencies {
    compileOnly 'io.papermc.paper:paper-api:1.20.4-R0.1-SNAPSHOT'
    compileOnly 'me.clip:placeholderapi:2.11.6'
    compileOnly 'net.luckperms:api:5.4'
    compileOnly 'org.jetbrains:annotations:24.1.0'

    implementation 'com.zaxxer:HikariCP:4.0.3'
    implementation 'org.xerial:sqlite-jdbc:3.45.0.0'
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'org.bstats:bstats-bukkit:3.2.1'
    implementation 'com.github.ben-manes.caffeine:caffeine:2.9.3'
    implementation 'org.slf4j:slf4j-nop:1.7.36'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.1'
    testImplementation 'com.github.seeseemelk:MockBukkit-v1.20:3.76.0'
    testImplementation 'org.mockito:mockito-core:5.8.0'
    testImplementation 'org.assertj:assertj-core:3.24.2'
    testImplementation 'me.clip:placeholderapi:2.11.6'
    testImplementation 'net.luckperms:api:5.4'
}

shadowJar {
    archiveBaseName.set('DZEconomy')
    archiveVersion.set(project.version)
    archiveClassifier.set('')

    mergeServiceFiles()

    relocate 'com.google.gson', 'online.demonzdevelopment.dzeconomy.libs.gson'
    relocate 'com.zaxxer.hikari', 'online.demonzdevelopment.dzeconomy.libs.hikari'
    relocate 'org.slf4j', 'online.demonzdevelopment.dzeconomy.libs.slf4j'
    relocate 'org.bstats', 'online.demonzdevelopment.dzeconomy.libs.bstats'
    relocate 'com.github.benmanes.caffeine', 'online.demonzdevelopment.dzeconomy.libs.caffeine'
    relocate 'org.checkerframework', 'online.demonzdevelopment.dzeconomy.libs.checkerframework'
    relocate 'com.google.errorprone', 'online.demonzdevelopment.dzeconomy.libs.errorprone'

    exclude 'META-INF/*.SF'
    exclude 'META-INF/*.DSA'
    exclude 'META-INF/*.RSA'
    exclude 'META-INF/native-image/**'
    exclude 'META-INF/module-info.class'
    exclude 'META-INF/versions/9/module-info.class'
    exclude 'META-INF/versions/9/org/**'
    exclude 'META-INF/versions/11/**'
    exclude 'META-INF/versions/17/**'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-Xlint:-options'
}

test {
    useJUnitPlatform()
}
